adding grid and plane

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,4 @@
 
 AnimationProject/AnimationProject.pro.user
 build-AnimationProject-Desktop_Qt_5_12_11_MinGW_64_bit-Debug/*
+build-AnimationProject-Desktop_Qt_5_12_11_MSVC2017_64bit-Debug/*
