--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,4 @@
 AnimationProject/AnimationProject.pro.user
 build-AnimationProject-Desktop_Qt_5_12_11_MinGW_64_bit-Debug/*
 build-AnimationProject-Desktop_Qt_5_12_11_MSVC2017_64bit-Debug/*
+build-AnimationProject-Desktop_Qt_5_15_2_MSVC2019_64bit-Debug/*
