--- a/.gitignore
+++ b/.gitignore
@@ -5,3 +5,4 @@ build-AnimationProject-Desktop_Qt_5_12_11_MSVC2017_64bit-Debug/*
 build-AnimationProject-Desktop_Qt_5_15_2_MSVC2019_64bit-Debug/*
 build-AnimationProject-Replacement_for_Desktop_Qt_5_12_11_MSVC2017_64bit-Debug/*
 build-AnimationProject-Replacement_for_Desktop_Qt_5_12_11_MSVC2017_64bit-Release/*
+build-AnimationProject-Desktop_Qt_5_15_2_MinGW_64_bit-Release/*
